Force LeftPanel to avoid scrolling on small lists (fix #1081)

--- a/core/src/plugins/gui.ajax/res/themes/orbit/css/components/leftpanel.less
+++ b/core/src/plugins/gui.ajax/res/themes/orbit/css/components/leftpanel.less
@@ -135,7 +135,7 @@
   .simple-provider{
     position: relative;
     .infinite-parent-smooth-height > div{
-      -ms-overflow-y: auto !important;
+      overflow-y: auto !important;
     }
     .material-list-entry{
       .nav-list-entry();
