--- a/core/src/plugins/gui.ajax/res/themes/orbit/css/pydio.css
+++ b/core/src/plugins/gui.ajax/res/themes/orbit/css/pydio.css
@@ -4064,7 +4064,7 @@ div.menu.rootDirChooser span.rootDirTitle {
   -webkit-font-smoothing: antialiased;
   font-size: 13px;
   color: rgba(255, 255, 255, 0.92);
-  overflow-y: scroll;
+  overflow-y: auto;
   box-sizing: border-box;
   -webkit-transition: all 550ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
           transition: all 550ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
@@ -4187,7 +4187,7 @@ div.menu.rootDirChooser span.rootDirTitle {
   position: relative;
 }
 .left-panel .simple-provider .infinite-parent-smooth-height > div {
-  -ms-overflow-y: auto !important;
+  overflow-y: auto !important;
 }
 .left-panel .simple-provider .material-list-entry {
   padding: 6px 1px 6px 16px;
